--- a/index.html
+++ b/index.html
@@ -3,72 +3,110 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>AI Travel Planner</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<title>AI Travel Planner — Fancy Demo</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
-    --bg:#f6fbff; --card:#ffffff; --accent:#075985; --muted:#64748b; --glass:rgba(7,89,133,0.06);
-    --accent-2:#0ea5a4;
+    --bg-1: #f0f9ff;
+    --bg-2: #eaf6ff;
+    --card:#ffffff;
+    --muted:#607090;
+    --accent1:#2563eb;
+    --accent2:#06b6d4;
+    --glass: rgba(255,255,255,0.7);
+    --glass-2: rgba(255,255,255,0.06);
   }
+  [data-theme="dark"]{
+    --bg-1:#041227; --bg-2:#041427; --card:rgba(15,23,42,0.86); --muted:#9fb4c9;
+    --accent1:#7c3aed; --accent2:#06b6d4; --glass: rgba(255,255,255,0.04); --glass-2: rgba(255,255,255,0.02);
+  }
+
   *{box-sizing:border-box}
-  body{margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(180deg,#eef7ff 0%, #f6fbff 100%);color:#072035;padding:32px}
-  .wrap{max-width:1000px;margin:0 auto;display:grid;grid-template-columns:420px 1fr;gap:28px;align-items:start}
-  header{grid-column:1/-1;display:flex;gap:14px;align-items:center;margin-bottom:6px}
-  .logo{
-    width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:22px;box-shadow:0 8px 24px rgba(4,20,35,0.08)
+  html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial;color:var(--text,#072035)}
+  body{background:linear-gradient(180deg,var(--bg-1),var(--bg-2));padding:28px;transition:background .3s}
+  .wrap{max-width:1120px;margin:0 auto;display:grid;grid-template-columns:440px 1fr;gap:22px;align-items:start}
+  header{grid-column:1/-1;display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:6px}
+  .title {
+    display:flex;gap:14px;align-items:center;
   }
-  h1{margin:0;font-size:20px;color:#04243a}
+  .logo {
+    width:72px;height:72px;border-radius:16px;display:flex;align-items:center;justify-content:center;
+    background:linear-gradient(135deg,var(--accent1),var(--accent2));color:#fff;font-weight:800;font-size:22px;box-shadow:0 12px 30px rgba(6,37,78,0.12);
+  }
+  h1{margin:0;font-size:20px}
   .subtitle{margin:0;color:var(--muted);font-size:13px}
 
-  .card{background:var(--card);border-radius:12px;padding:18px;box-shadow:0 6px 18px rgba(12,24,40,0.06);border:1px solid rgba(7,89,133,0.03)}
-  label{display:block;font-weight:600;margin-bottom:8px;color:#07314e}
-  textarea,input,select{width:100%;padding:12px;border-radius:10px;border:1px solid #e6eef5;background:transparent;color:#072035;font-size:14px}
-  textarea{min-height:110px}
-  .muted{color:var(--muted);font-size:13px;margin-top:8px}
+  /* card */
+  .card{background:var(--card);border-radius:14px;padding:18px;border:1px solid rgba(0,0,0,0.04);box-shadow:0 10px 30px rgba(2,6,23,0.06);transition:transform .18s}
+  .card:hover{transform:translateY(-4px)}
 
-  .actions{display:flex;gap:10px;margin-top:12px}
+  label{display:block;font-weight:700;margin-bottom:8px;color:var(--muted)}
+  textarea,input,select{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(11,20,36,0.04);background:transparent;color:unset;font-size:14px}
+  textarea{min-height:110px;resize:vertical}
+
+  .actions{display:flex;gap:10px;margin-top:12px;align-items:center}
   .btn{padding:10px 14px;border-radius:10px;border:none;cursor:pointer;font-weight:700}
-  .btn-cta{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:white;box-shadow:0 8px 20px rgba(14,165,164,0.12)}
-  .btn-ghost{background:#f1f5f9;color:#0b2540;border:1px solid rgba(7,89,133,0.04)}
+  .btn-primary{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:white;box-shadow:0 10px 24px rgba(9,30,63,0.12)}
+  .btn-ghost{background:transparent;border:1px solid rgba(11,20,36,0.06)}
 
+  .muted{color:var(--muted);font-size:13px;margin-top:10px}
+
+  /* right panel */
   .panel{display:flex;flex-direction:column;gap:18px}
-  .resultCard{background:linear-gradient(180deg,#ffffff,#fbfdff);border-radius:12px;padding:16px;border:1px solid rgba(7,89,133,0.03);box-shadow:0 6px 18px rgba(10,20,30,0.03)}
-  .summaryBox{white-space:pre-wrap;color:#06233a;font-size:15px;line-height:1.45}
-  .metaRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-  .pill{padding:8px 10px;border-radius:999px;background:var(--glass);color:#083349;font-weight:700;font-size:13px;border:1px solid rgba(7,89,133,0.04)}
+  .resultTop{display:flex;justify-content:space-between;align-items:center;gap:12px}
+  .statusBadge{padding:8px 12px;border-radius:999px;background:var(--glass);font-weight:700;color:var(--muted);display:flex;gap:8px;align-items:center}
+  .spinner{width:18px;height:18px;border-radius:50%;border:3px solid rgba(255,255,255,0.12);border-top-color:rgba(255,255,255,0.6);animation:spin .9s linear infinite;display:inline-block}
+  @keyframes spin{to{transform:rotate(360deg)}}
 
-  pre{background:#072435;color:#dff7fb;padding:12px;border-radius:10px;overflow:auto;max-height:420px;border:1px solid rgba(7,89,133,0.02)}
-  footer{grid-column:1/-1;margin-top:18px;color:var(--muted);font-size:13px}
+  .summary{white-space:pre-wrap;font-size:15px;line-height:1.45;color:inherit}
+  pre.json{background:linear-gradient(180deg, rgba(2,16,26,0.86), rgba(2,20,30,0.92));color:#c9fbff;padding:14px;border-radius:10px;overflow:auto;max-height:360px;border:1px solid rgba(255,255,255,0.02)}
 
-  @media (max-width:920px){
-    .wrap{grid-template-columns:1fr;padding:20px}
-    header{flex-direction:column;align-items:flex-start;gap:6px}
+  .meta{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+  .pill{padding:8px 12px;border-radius:999px;background:var(--glass-2);font-weight:700;color:var(--muted)}
+
+  /* request history */
+  .history{display:flex;flex-direction:column;gap:8px;max-height:260px;overflow:auto}
+  .histItem{display:flex;justify-content:space-between;gap:8px;padding:8px;border-radius:8px;background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));cursor:pointer;border:1px solid rgba(0,0,0,0.03)}
+  .histItem:hover{background:linear-gradient(90deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02))}
+
+  .topRow{display:flex;gap:12px;align-items:center}
+  .iconBox{width:46px;height:46px;border-radius:10px;background:linear-gradient(135deg,var(--accent2),var(--accent1));display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:18px;box-shadow:0 8px 20px rgba(2,6,23,0.08)}
+
+  /* layout responsive */
+  @media (max-width:980px){
+    .wrap{grid-template-columns:1fr;padding:18px}
+    header{flex-direction:column;align-items:flex-start;gap:8px}
   }
 
-  .iconRow{display:flex;gap:8px;align-items:center}
-  .icon{width:38px;height:38px;border-radius:8px;background:rgba(7,89,133,0.06);display:flex;align-items:center;justify-content:center;color:var(--accent);font-weight:700}
+  /* subtle float plane */
+  .plane {
+    position:relative; display:inline-block; transform:translateY(-2px);
+  }
+  .doneGlow{box-shadow:0 8px 28px rgba(6,37,78,0.08)}
 </style>
 </head>
-<body>
+<body data-theme="light">
   <div class="wrap">
     <header>
-      <div class="logo">AI</div>
-      <div>
-        <h1>AI Travel Planner</h1>
-        <p class="subtitle">Plan better trips with AI</p>
+      <div class="title">
+        <div class="logo">AI</div>
+        <div>
+          <h1>AI Travel Planner</h1>
+          <p class="subtitle">Plan better trips with AI</p>
+        </div>
+      </div>
+
+      <div style="display:flex;gap:12px;align-items:center">
+        <div id="themeToggle" style="cursor:pointer;padding:8px;border-radius:10px;background:var(--glass);font-weight:700">🌙 Dark</div>
+        <div style="font-size:13px;color:var(--muted)">Preview</div>
       </div>
     </header>
 
+    <!-- LEFT: input -->
     <div class="card">
-      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-        <div style="display:flex;gap:10px;align-items:center">
-          <div class="iconRow">
-            <div class="icon" title="Flights">✈️</div>
-            <div class="icon" title="Hotels">🏨</div>
-            <div class="icon" title="Activities">🗺️</div>
-          </div>
-          <div style="font-size:13px;color:#083349;font-weight:700">Create an itinerary</div>
-        </div>
+      <div class="topRow" style="margin-bottom:10px">
+        <div class="iconBox">✈️</div>
+        <div style="font-weight:800">Create an itinerary</div>
       </div>
 
       <label for="user_text">Tell the planner (destination, days & budget)</label>
@@ -84,64 +122,197 @@
       </select>
 
       <div class="actions">
-        <button id="submitBtn" class="btn btn-cta">Plan Trip</button>
+        <button id="planBtn" class="btn btn-primary">Plan Trip <span class="plane" style="margin-left:8px">✈️</span></button>
         <button id="clearBtn" class="btn btn-ghost">Clear</button>
+        <div style="flex:1"></div>
       </div>
 
-      <p class="muted">Tip: Try “Plan a 3-day trip to Chicago under $300” or “One-day NYC food tour under $200”.</p>
+      <div class="muted">Tip: Try “Plan a 3-day trip to Chicago under $300” or “One-day NYC food tour under $200”.</div>
     </div>
 
+    <!-- RIGHT: results -->
     <div class="panel">
-      <div class="resultCard">
-        <div style="display:flex;justify-content:space-between;align-items:center">
-          <div>
-            <strong style="font-size:16px">Result preview</strong>
-            <div style="color:var(--muted);font-size:13px">Human summary & structured itinerary</div>
-          </div>
-          <div style="display:flex;gap:8px;align-items:center">
-            <div style="font-size:13px;color:var(--muted)">Status:</div>
-            <div class="pill" id="bstat">Idle</div>
-          </div>
+      <div class="card resultTop">
+        <div>
+          <div style="font-weight:800;font-size:16px">Result preview</div>
+          <div style="font-size:13px;color:var(--muted)">Human summary & structured itinerary</div>
         </div>
+        <div id="statusBadge" class="statusBadge"><span id="statusText">Idle</span></div>
+      </div>
 
-        <div style="margin-top:12px" class="summaryBox" id="summaryBox">No results yet — submit a request on the left.</div>
-
-        <div class="metaRow">
-          <div class="pill" id="cost">Cost: -</div>
-          <div class="pill" id="rid">Req: -</div>
+      <div class="card">
+        <div class="summary" id="summary">No results yet — submit a request on the left.</div>
+        <div class="meta">
+          <div class="pill" id="pillCost">Cost: -</div>
+          <div class="pill" id="pillBudget">Budget: -</div>
+          <div class="pill" id="pillReq">Req: -</div>
         </div>
       </div>
 
-      <div class="resultCard">
+      <div class="card">
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-          <strong>Itinerary JSON</strong>
+          <div style="font-weight:800">Itinerary JSON</div>
           <div style="display:flex;gap:8px">
             <button id="copyBtn" class="btn btn-ghost">Copy</button>
             <button id="downloadBtn" class="btn btn-ghost">Download</button>
           </div>
         </div>
-        <pre id="jsonBox">No data</pre>
+        <pre class="json" id="json">No data</pre>
       </div>
 
-      <footer>Built with n8n • OpenRouter • Airtable</footer>
+      <div class="card">
+        <div style="display:flex;justify-content:space-between;align-items:center">
+          <div style="font-weight:800">Recent requests</div>
+          <div style="font-size:13px;color:var(--muted)">local history</div>
+        </div>
+        <div class="history" id="history"></div>
+      </div>
     </div>
   </div>
 
 <script>
+/* ---------- CONFIG: keep your webhook URLs ---------- */
 const WEBHOOK_URL_PROD = "https://ashwathy.app.n8n.cloud/webhook/622aec9e-568a-4089-a202-426b4ed6cd27";
 const WEBHOOK_URL_TEST = "https://ashwathy.app.n8n.cloud/webhook-test/622aec9e-568a-4089-a202-426b4ed6cd27";
+/* ------------------------------------------------- */
 
 const $ = id => document.getElementById(id);
-const summaryBox = $("summaryBox"), jsonBox = $("jsonBox"), bstat = $("bstat"), cost = $("cost"), rid = $("rid");
+const planBtn = $("planBtn"), clearBtn = $("clearBtn"), copyBtn = $("copyBtn"), downloadBtn = $("downloadBtn");
+const summaryEl = $("summary"), jsonEl = $("json");
+const pillCost = $("pillCost"), pillBudget = $("pillBudget"), pillReq = $("pillReq");
+const statusText = $("statusText"), statusBadge = $("statusBadge");
+const historyEl = $("history");
+const themeToggle = $("themeToggle");
 
+let historyItems = JSON.parse(localStorage.getItem("trip_history_v1")||"[]");
+
+function renderHistory(){
+  historyEl.innerHTML = "";
+  historyItems.slice().reverse().forEach((h, i) => {
+    const div = document.createElement("div");
+    div.className = "histItem";
+    div.innerHTML = `<div style="font-weight:700">${h.user_text}</div><div style="color:var(--muted);font-size:13px">${h.when}</div>`;
+    div.onclick = ()=> {
+      // load item into UI
+      $("user_text").value = h.user_text;
+      summaryEl.textContent = h.summary || "";
+      jsonEl.textContent = h.itinerary ? JSON.stringify(h.itinerary, null, 2) : (h.raw || "");
+      pillCost.textContent = h.cost ? ("Cost: $" + h.cost) : "Cost: -";
+      pillBudget.textContent = h.budget ? ("Budget: $" + h.budget) : "Budget: -";
+      pillReq.textContent = h.request_id ? ("Req: " + h.request_id) : "Req: -";
+    };
+    historyEl.appendChild(div);
+  });
+}
+renderHistory();
+
+function setStatus(s, busy=false){
+  statusText.textContent = s;
+  if(busy){
+    statusBadge.innerHTML = `<span class="spinner"></span> ${s}`;
+  } else {
+    statusBadge.innerHTML = `<span style="width:14px;height:14px;border-radius:50%;display:inline-block;background:linear-gradient(90deg,var(--accent1),var(--accent2));margin-right:8px"></span> ${s}`;
+  }
+}
+
+/* theme toggle */
+function applyTheme(t){
+  document.body.setAttribute("data-theme", t);
+  themeToggle.textContent = t === "dark" ? "☀️ Light" : "🌙 Dark";
+  localStorage.setItem("ui_theme_v1", t);
+}
+const saved = localStorage.getItem("ui_theme_v1") || "light";
+applyTheme(saved);
+themeToggle.onclick = ()=> applyTheme(document.body.getAttribute("data-theme")==="light"?"dark":"light");
+
+/* webhook call */
 async function callWebhook(url, payload){
-  const res = await fetch(url, { method:"POST", headers:{"Content-Type":"application/json"}, body: JSON.stringify(payload) });
+  const res = await fetch(url, { method: "POST", headers: {"Content-Type":"application/json"}, body: JSON.stringify(payload) });
   const text = await res.text();
   try { return { ok: res.ok, status: res.status, data: JSON.parse(text) }; }
   catch(e){ return { ok: res.ok, status: res.status, data: text }; }
 }
 
-submitBtn.addEventListener("click", async ()=>{});
+planBtn.onclick = async ()=>{
+  const user_text = $("user_text").value.trim();
+  if(!user_text){ alert("Please enter a request"); return; }
+  const user_id = $("user_id").value.trim() || ("web_user_" + Date.now());
+  const mode = $("mode").value;
+  const url = mode === "prod" ? WEBHOOK_URL_PROD : WEBHOOK_URL_TEST;
+
+  setStatus("Processing...", true);
+  summaryEl.textContent = "Waiting for results...";
+  jsonEl.textContent = "...";
+
+  try {
+    const out = await callWebhook(url, { user_id, user_text });
+    if(!out.ok){
+      setStatus("Error", false);
+      summaryEl.textContent = typeof out.data === "string" ? out.data : JSON.stringify(out.data, null, 2);
+      jsonEl.textContent = "Error response";
+      return;
+    }
+
+    setStatus("Complete", false);
+    const d = out.data || {};
+    const summary = d.summary || d.formatted_summary || d.response_summary || d.formatted_summary || "";
+    const itinerary = d.itinerary || d.parsed_json || d.optimized_itinerary || null;
+    const itineraryCost = d.itinerary_cost || d.optimized_itinerary_cost || d.total_cost || null;
+    const budgetStatus = d.budget_status || null;
+    const requestId = d.request_id || d.Request_ID || null;
+    const userBudget = d.budget_raw || null;
+
+    // show
+    summaryEl.textContent = summary || (typeof d === "string" ? d : JSON.stringify(d, null, 2));
+    jsonEl.textContent = itinerary ? JSON.stringify(itinerary, null, 2) : (typeof d === "string" ? d : JSON.stringify(d, null, 2));
+    pillCost.textContent = itineraryCost ? ("Cost: $" + itineraryCost) : "Cost: -";
+    pillBudget.textContent = budgetStatus ? ("Budget: " + budgetStatus) : (userBudget ? ("Budget: $" + userBudget) : "Budget: -");
+    pillReq.textContent = requestId ? ("Req: " + requestId) : "Req: -";
+
+    // save to local history
+    historyItems = historyItems || [];
+    historyItems.push({
+      when: (new Date()).toLocaleString(),
+      user_text,
+      summary,
+      itinerary,
+      cost: itineraryCost,
+      budget: userBudget,
+      request_id: requestId,
+      raw: typeof out.data === "string" ? out.data : JSON.stringify(out.data)
+    });
+    // keep last 12
+    if(historyItems.length>12) historyItems = historyItems.slice(historyItems.length-12);
+    localStorage.setItem("trip_history_v1", JSON.stringify(historyItems));
+    renderHistory();
+
+  } catch(e){
+    setStatus("Network error", false);
+    summaryEl.textContent = "Network/CORS error: " + e.message;
+    jsonEl.textContent = "No data";
+  }
+};
+
+clearBtn.onclick = ()=>{
+  $("user_text").value = "";
+  $("user_id").value = "";
+  summaryEl.textContent = "No results yet — submit a request on the left.";
+  jsonEl.textContent = "No data";
+  pillCost.textContent = "Cost: -";
+  pillBudget.textContent = "Budget: -";
+  pillReq.textContent = "Req: -";
+};
+
+copyBtn.onclick = ()=>{
+  navigator.clipboard.writeText(jsonEl.textContent);
+  alert("Copied JSON to clipboard");
+};
+
+downloadBtn.onclick = ()=>{
+  const blob = new Blob([jsonEl.textContent], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a"); a.href = url; a.download = "itinerary.json"; a.click(); URL.revokeObjectURL(url);
+};
 </script>
 </body>
 </html>
